# WonderGUI

./: .gitignore
src/: CMakeLists.txt
src/extensions/debugger/: CMakeLists.txt  wg_debugbackend.cpp  wg_debugbackend.h  wg_debugcapsule.cpp  wg_debugcapsule.h  wg_debugfrontend.cpp  wg_debugfrontend.h  wg_debugfrontendwindow.cpp  wg_debugfrontendwindow.h  wg_debugger.h  wg_debugoverlay.cpp  wg_debugoverlay.h  wg_debugpanel.cpp  wg_debugpanel.h  wg_debugwindow.cpp  wg_debugwindow.h  wg_dummyinfopanel.cpp  wg_dummyinfopanel.h  wg_idebugger.h
src/extensions/dx12gfx/: CMakeLists.txt  wg_dx12backend.cpp  wg_dx12backend.h  wg_dx12edgemap.cpp  wg_dx12edgemap.h  wg_dx12edgemapfactory.cpp  wg_dx12edgemapfactory.h  wg_dx12shaders.cpp  wg_dx12shaders.cpp.template  wg_dx12surface.cpp  wg_dx12surface.h  wg_dx12surfacefactory.cpp  wg_dx12surfacefactory.h
src/extensions/freetypefont/: CMakeLists.txt  wg_c_freetypefont.cpp  wg_c_freetypefont.h  wg_freetypefont.cpp  wg_freetypefont.h
src/extensions/gfxstream/: CMakeLists.txt  wg_gfxstream.cpp  wg_gfxstream.h  wg_mirrorsurface.cpp  wg_mirrorsurface.h  wg_mirrorsurfacefactory.cpp  wg_mirrorsurfacefactory.h  wg_remotesurface.cpp  wg_remotesurface.h  wg_remotesurfacefactory.cpp  wg_remotesurfacefactory.h  wg_streambackend.cpp  wg_streambackend.h  wg_streambuffer.cpp  wg_streambuffer.h  wg_streamdecoder.cpp  wg_streamdecoder.h  wg_streamedgemap.cpp  wg_streamedgemap.h  wg_streamedgemapfactory.cpp  wg_streamedgemapfactory.h  wg_streamencoder.cpp  wg_streamencoder.h  wg_streamgfxdevicefactory.cpp  wg_streamgfxdevicefactory.h  wg_streamlogger.cpp  wg_streamlogger.h  wg_streamloopwrapper.cpp  wg_streamloopwrapper.h  wg_streammerger.cpp  wg_streammerger.h  wg_streamplayer.cpp  wg_streamplayer.h  wg_streampump.cpp  wg_streampump.h  wg_streamreader.cpp  wg_streamreader.h  wg_streamsink.h  wg_streamsource.h  wg_streamsplitter.cpp  (+14 more)
src/extensions/legacygui/: CMakeLists.txt  wg2_anim.cpp  wg2_anim.h  wg2_animplayer.cpp  wg2_animplayer.h  wg2_base.cpp  wg2_base.h  wg2_blockset.cpp  wg2_blockset.h  wg2_button.cpp  wg2_button.h  wg2_canvascapsule.cpp  wg2_canvascapsule.h  wg2_capsule.cpp  wg2_capsule.h  wg2_chart.cpp  wg2_chart.h  wg2_chart2.cpp  wg2_chart2.h  wg2_checkbox.cpp  wg2_checkbox.h  wg2_color.h  wg2_colorset.cpp  wg2_colorset.h  wg2_container.cpp  wg2_container.h  wg2_cursor.cpp  wg2_cursor.h  wg2_cursorinstance.cpp  wg2_cursorinstance.h  wg2_dragndroplayer.cpp  wg2_dragndroplayer.h  wg2_event.cpp  wg2_event.h  wg2_eventfilter.cpp  wg2_eventfilter.h  wg2_eventhandler.cpp  wg2_eventhandler.h  wg2_eventlogger.cpp  wg2_eventlogger.h  (+104 more)
src/extensions/metalgfx/: wg_metalbackend.h  wg_metalbackend.mm  wg_metaledgemap.h  wg_metaledgemap.mm  wg_metaledgemapfactory.h  wg_metalgfxdevice.h  wg_metalgfxdevicefactory.h  wg_metalsurface.h  wg_metalsurface.mm  wg_metalsurfacefactory.h
src/extensions/openglgfx/: CMakeLists.txt  wg_glbackend.cpp  wg_glbackend.h  wg_glbackendshaders.cpp  wg_gledgemap.cpp  wg_gledgemap.h  wg_gledgemapfactory.cpp  wg_gledgemapfactory.h  wg_glgfxdevicefactory.cpp  wg_glgfxdevicefactory.h  wg_glshaders.cpp  wg_glsurface.cpp  wg_glsurface.h  wg_glsurfacefactory.cpp  wg_glsurfacefactory.h
src/extensions/plugin/: CMakeLists.txt  wg2_c_pluginroot.cpp  wg2_c_pluginroot.h  wg2_pluginbase.cpp  wg2_pluginbase.h  wg2_pluginroot.cpp  wg2_pluginroot.h  wg_c_plugincapsule.cpp  wg_c_plugincapsule.h  wg_c_pluginroot.cpp  wg_c_pluginroot.h  wg_pluginbase.cpp  wg_pluginbase.h  wg_pluginbitmapcache.cpp  wg_pluginbitmapcache.h  wg_pluginbitmapfont.cpp  wg_pluginbitmapfont.h  wg_plugincalls.cpp  wg_plugincalls.h  wg_plugincanvaslayers.cpp  wg_plugincanvaslayers.h  wg_plugincapsule.cpp  wg_plugincapsule.h  wg_pluginedgemap.cpp  wg_pluginedgemap.h  wg_pluginedgemapfactory.cpp  wg_pluginedgemapfactory.h  wg_pluginfont.cpp  wg_pluginfont.h  wg_pluginfreetypefont.cpp  wg_pluginfreetypefont.h  wg_plugingfxdevice.cpp  wg_plugingfxdevice.h  wg_pluginhostbridge.cpp  wg_pluginhostbridge.h  wg_plugininterface.cpp  wg_plugininterface.h  wg_pluginroot.cpp  wg_pluginroot.h  wg_pluginsurface.cpp  (+5 more)
src/extensions/softgfx/: CMakeLists.txt  wg_linearbackend.cpp  wg_linearbackend.h  wg_softbackend.cpp  wg_softbackend.h  wg_softedgemap.cpp  wg_softedgemap.h  wg_softedgemapfactory.cpp  wg_softedgemapfactory.h  wg_softgfxdevicefactory.cpp  wg_softgfxdevicefactory.h  wg_softkernels_bgr565linear_base.cpp  wg_softkernels_bgr565linear_extras.cpp  wg_softkernels_bgr565linear_extras.h  wg_softkernels_bgr565srgb_base.cpp  wg_softkernels_bgr565srgb_extras.cpp  wg_softkernels_bgr565srgb_extras.h  wg_softkernels_default.cpp  wg_softkernels_rgb555be_base.cpp  wg_softkernels_rgb555be_extras.cpp  wg_softkernels_rgb555be_extras.h  wg_softkernels_rgb565be_base.cpp  wg_softkernels_rgb565be_base.h  wg_softkernels_rgb565be_extras.cpp  wg_softkernels_rgb565be_extras.h  (+6 more)
src/themes/: wg_oldskool.h
src/tools/: CMakeLists.txt
src/widgetkits/: wg_oldskool.h
src/wondergear/: CMakeLists.txt  wg_blob.cpp  wg_blob.h  wg_componentptr.h  wg_dataset.cpp  wg_dataset.h  wg_dynamicbuffer.h  wg_gearbase.cpp  wg_gearbase.h  wg_gearenumextras.cpp  wg_gearenumextras.h  wg_geartypes.h  wg_memheap.cpp  wg_memheap.h  wg_mempool.h  wg_memstack.cpp  wg_memstack.h  wg_object.cpp  wg_object.h  wg_pointers.h  wg_strongptr.h  wg_weakptr.h  wondergear.h
src/wondergfx/: CMakeLists.txt  wg_backendlogger.cpp  wg_backendlogger.h  wg_bitmapcache.cpp  wg_bitmapcache.h  wg_bitmapfont.cpp  wg_bitmapfont.h  wg_blurbrush.cpp  wg_blurbrush.h  wg_c_gradyent.cpp  wg_canvaslayers.cpp  wg_canvaslayers.h  wg_color.cpp  wg_color.h  wg_colorbands.cpp  wg_colorbands.h  wg_compress.cpp  wg_compress.h  wg_compression.cpp  wg_compression.h  wg_compressor.cpp  wg_compressor.h  wg_dummycompression.cpp  wg_dummycompression.h  wg_dummyfont.cpp  wg_dummyfont.h  wg_edgemap.cpp  wg_edgemap.h  wg_edgemapfactory.cpp  wg_edgemapfactory.h  wg_edgemaptools.cpp  wg_edgemaptools.h  wg_font.cpp  wg_font.h  wg_geo.cpp  wg_geo.h  wg_gfxbackend.cpp  wg_gfxbackend.h  wg_gfxbase.cpp  wg_gfxbase.h  (+69 more)
src/wondergui/: CMakeLists.txt  wondergui.h
(+619 files in other folders)
